# learnhaskell

./: .gitignore  README.md
learning/: Hw01.hs  Hw01Spec.hs  Main.hs  cabal.config  learning.cabal
