name:                learning
version:             0.1.0.0
synopsis:            Learning haskell?
description:         Learning haskell?
homepage:            https://github.com/thomassigurdsen/learnhaskell
license:             GPL-3
license-file:        LICENSE
author:              Thomas Sigurdsen
maintainer:          thomas.sigurdsen@gmail.com
category:            Learning/Educational
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules: Hw01  
  build-depends: base >=4.7 && <4.8
  -- hs-source-dirs:      src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite tests
    build-depends: base
                 , hspec ==2.*
                 , HUnit
                 , learning
                 , QuickCheck
    default-language: Haskell2010
    ghc-options: -fhpc
                 -Wall
                 -Werror
    -- hs-source-dirs: src
    main-is: Spec.hs
    other-modules: Hw01Spec
    type: exitcode-stdio-1.0

executable hw01
    build-depends: base
                 , learning
    default-language: Haskell2010
    ghc-prof-options: -auto-all
                      -prof
    main-is: Main.hs

-- dist/
-- Hw01.hs        | The actual exercise code
-- Hw01Spec.hs    | HSpec test code
-- LICENSE
-- Main.hs        | imports Hw01 and runs ex01 (the first exercise)
-- Setup.hs
-- Spec.hs        | contains a preprocessor call for hspec-discover
-- cabal.config
-- cabal.sandbox.config
-- cis194dls@     | Unrelated, pdfs and learning resources
-- learning.cabal | This file
